# nba-agent

./: .gitignore  .pre-commit-config.yaml  README.md  env.example  main.py  pyproject.toml  ruff.toml
..github/workflows/: python-code-quality.yaml
.github/workflows/: python-code-quality.yml
src/application/: use_cases.py
src/data/: schemas.py  stats_schema.py
src/domain/: entities.py  repositories.py  services.py
src/infrastructure/: memory_query_repository.py  nba_api_repository.py
src/presentation/: cli_interface.py  streamlit_interface.py
src/services/: ai_services.py
src/tools/: __init__.py  call_player_all_seasons.py  call_player_one_season.py  compare_two_players.py  get_player_id_tool.py  plot_stats_trend_tool.py
test/: test_tools.py
