[project]
name = "nba-agent"
version = "0.1.0"
description = "NBA AI Agent using LangChain and OpenAI"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.3",
    "types-setuptools>=80.9.0.20250529",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "openai>=1.0.0",
    "nba-api>=1.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "plotly>=6.2.0",
]
